新文件：   client/player_client_test.go
